--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Textures of Factory scene
+[Aa]ssets/FactoryDistrict/Textures*
+
 .vsconfig
